--- a/hi.html
+++ b/hi.html
@@ -1,1 +1,391 @@
 
+import React, { useState, createContext, useContext, useEffect } from "react";
+import { z } from "zod";
+import { useQuery, QueryClient, QueryClientProvider } from "@tanstack/react-query";
+import { Moon, Sun, User, Newspaper, Bitcoin, Globe, Gamepad2, TrendingUp, Settings, ArrowRight, Circle, RotateCcw, AlertCircle, ExternalLink, TrendingDown, Clock, Flag } from "lucide-react";
+import { Dialog, DialogContent, DialogHeader, DialogTitle } from "./components/ui/dialog";
+import { Button } from "./components/ui/button";
+import { Card, CardContent } from "./components/ui/card";
+import { Badge } from "./components/ui/badge";
+import { Skeleton } from "./components/ui/skeleton";
+import { Alert, AlertDescription } from "./components/ui/alert";
+import { Label } from "./components/ui/label";
+import { Switch } from "./components/ui/switch";
+
+// =================================================================
+// SCHEMA DEFINITIONS
+// (Recreating from schema.ts)
+// =================================================================
+const newsArticleSchema = z.object({
+  id: z.string(),
+  title: z.string(),
+  description: z.string(),
+  url: z.string(),
+  urlToImage: z.string().nullable(),
+  publishedAt: z.string(),
+  source: z.object({
+    name: z.string()
+  }),
+  category: z.enum(['general', 'crypto', 'global']).optional()
+});
+
+const cryptoDataSchema = z.object({
+  id: z.string(),
+  symbol: z.string(),
+  name: z.string(),
+  current_price: z.number(),
+  price_change_percentage_24h: z.number(),
+  market_cap: z.number(),
+  image: z.string()
+});
+
+const marketDataSchema = z.object({
+  symbol: z.string(),
+  name: z.string(),
+  price: z.number(),
+  change: z.number(),
+  changePercent: z.number(),
+  timestamp: z.string()
+});
+
+type NewsArticle = z.infer<typeof newsArticleSchema>;
+type CryptoData = z.infer<typeof cryptoDataSchema>;
+type MarketData = z.infer<typeof marketDataSchema>;
+
+// =================================================================
+// API CLIENT
+// (Recreating from api.ts)
+// =================================================================
+// Note: In a real app, this would be a separate file, but for this
+// single-file example, it's defined here.
+const BASE_URL = ""; // Assuming a local server is running on the same host
+
+async function apiRequest(method: string, url: string) {
+  const response = await fetch(BASE_URL + url, {
+    method,
+    headers: {
+      'Content-Type': 'application/json',
+    },
+  });
+  if (!response.ok) {
+    throw new Error(`API call failed: ${response.statusText}`);
+  }
+  return response;
+}
+
+const api = {
+  async getNews(): Promise<NewsArticle[]> {
+    const response = await apiRequest("GET", "/api/news");
+    return response.json();
+  },
+  async getCryptoNews(): Promise<NewsArticle[]> {
+    const response = await apiRequest("GET", "/api/crypto-news");
+    return response.json();
+  },
+  async getGlobalNews(): Promise<NewsArticle[]> {
+    const response = await apiRequest("GET", "/api/global-news");
+    return response.json();
+  },
+  async getCryptoPrices(): Promise<CryptoData[]> {
+    const response = await apiRequest("GET", "/api/crypto-prices");
+    return response.json();
+  },
+  async getMarketData(): Promise<MarketData[]> {
+    const response = await apiRequest("GET", "/api/indian-market");
+    return response.json();
+  }
+};
+
+// =================================================================
+// THEME CONTEXT
+// (Recreating from ThemeProvider.tsx)
+// =================================================================
+interface ThemeContextType {
+  isDark: boolean;
+  toggleTheme: () => void;
+}
+const ThemeContext = createContext<ThemeContextType | undefined>(undefined);
+
+const ThemeProvider = ({ children }: { children: React.ReactNode }) => {
+  const [isDark, setIsDark] = useState<boolean>(() => {
+    if (typeof window !== "undefined") {
+      const stored = localStorage.getItem("theme");
+      if (stored) return stored === "dark";
+      return window.matchMedia("(prefers-color-scheme: dark)").matches;
+    }
+    return false;
+  });
+
+  useEffect(() => {
+    if (isDark) {
+      document.documentElement.classList.add("dark");
+    } else {
+      document.documentElement.classList.remove("dark");
+    }
+    localStorage.setItem("theme", isDark ? "dark" : "light");
+  }, [isDark]);
+
+  const toggleTheme = () => setIsDark(!isDark);
+
+  return (
+    <ThemeContext.Provider value={{ isDark, toggleTheme }}>
+      {children}
+    </ThemeContext.Provider>
+  );
+};
+
+const useTheme = () => {
+  const context = useContext(ThemeContext);
+  if (!context) {
+    throw new Error("useTheme must be used within a ThemeProvider");
+  }
+  return context;
+};
+
+// =================================================================
+// UI COMPONENTS
+// (Recreating from Header.tsx, etc.)
+// =================================================================
+const Header = () => {
+  const { isDark, toggleTheme } = useTheme();
+  return (
+    <header className="sticky top-0 z-50 bg-white dark:bg-slate-800 shadow-sm border-b border-slate-200 dark:border-slate-700">
+      <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div className="flex justify-between items-center h-16">
+          <div className="flex items-center space-x-4">
+            <h1 className="text-2xl font-bold text-primary-600 dark:text-primary-400" data-testid="app-title">
+              <svg className="inline-block w-6 h-6 mr-2" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M3.5 18.5l6-6 4 4L22 6.9l-1.4-1.4-7.1 7.1-4-4-4.6 4.6z"/>
+              </svg>
+              MultiFeed
+            </h1>
+          </div>
+          <div className="flex items-center space-x-4">
+            <Button variant="ghost" size="icon" onClick={toggleTheme} data-testid="button-dark-mode-toggle" className="p-2 rounded-lg bg-slate-100 dark:bg-slate-700 hover:bg-slate-200 dark:hover:bg-slate-600 transition-colors duration-200">
+              {isDark ? <Sun className="h-5 w-5 text-slate-600 dark:text-slate-300" /> : <Moon className="h-5 w-5 text-slate-600 dark:text-slate-300" />}
+            </Button>
+            <Button variant="ghost" size="icon" data-testid="button-user-profile" className="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors duration-200">
+              <User className="h-5 w-5 text-slate-600 dark:text-slate-300" />
+            </Button>
+          </div>
+        </div>
+      </div>
+    </header>
+  );
+};
+
+// =================================================================
+// MODALS
+// (Recreating and adding new modals)
+// =================================================================
+interface ModalProps {
+  onClose: () => void;
+}
+
+const NewsModal = ({ onClose }: ModalProps) => {
+  const { data: articles, isLoading, error } = useQuery({ queryKey: ['/api/news'], queryFn: api.getNews });
+  const formatTimeAgo = (publishedAt: string) => { /* ... */ return '...'; };
+  return (
+    <Dialog open onOpenChange={onClose}>
+      <DialogContent className="max-w-4xl max-h-[90vh] overflow-hidden" data-testid="modal-news">
+        <DialogHeader><DialogTitle data-testid="text-news-title">General News</DialogTitle></DialogHeader>
+        <div className="overflow-y-auto max-h-[calc(90vh-80px)] p-6">
+          {error && <Alert data-testid="text-news-error"><AlertCircle /> <AlertDescription>Failed to load news.</AlertDescription></Alert>}
+          {isLoading && Array(10).fill(0).map((_, i) => <Skeleton key={i} className="h-24 w-full mb-4" />)}
+          {articles && articles.map((article) => (
+            <article key={article.id} className="flex space-x-4 p-4 mb-4 border rounded-lg hover:bg-slate-50 dark:hover:bg-slate-700/50">
+              <img src={article.urlToImage || ''} alt={article.title} className="w-24 h-16 object-cover rounded-lg flex-shrink-0" />
+              <div className="flex-1">
+                <h3 className="font-semibold">{article.title}</h3>
+                <p className="text-sm text-slate-500 line-clamp-2">{article.description}</p>
+                <a href={article.url} target="_blank" rel="noopener noreferrer" className="text-xs text-primary-600 hover:underline">Read more</a>
+              </div>
+            </article>
+          ))}
+        </div>
+      </DialogContent>
+    </Dialog>
+  );
+};
+
+const CryptoModal = ({ onClose }: ModalProps) => {
+  const { data: cryptoData, isLoading: cryptoLoading, error: cryptoError } = useQuery({ queryKey: ['/api/crypto-prices'], queryFn: api.getCryptoPrices });
+  const { data: cryptoNews, isLoading: newsLoading, error: newsError } = useQuery({ queryKey: ['/api/crypto-news'], queryFn: api.getCryptoNews });
+  const formatPrice = (p: number) => `₹${p.toFixed(2)}`;
+  const formatPercentage = (p: number) => `${p > 0 ? '+' : ''}${p.toFixed(2)}%`;
+  return (
+    <Dialog open onOpenChange={onClose}>
+      <DialogContent className="max-w-4xl max-h-[90vh] overflow-hidden" data-testid="modal-crypto">
+        <DialogHeader><DialogTitle data-testid="text-crypto-title">Crypto Markets</DialogTitle></DialogHeader>
+        <div className="overflow-y-auto max-h-[calc(90vh-80px)] p-6">
+          {cryptoError && <Alert data-testid="text-crypto-prices-error"><AlertCircle /> <AlertDescription>Failed to load prices.</AlertDescription></Alert>}
+          {cryptoLoading && Array(3).fill(0).map((_,i) => <Skeleton key={i} className="h-20 w-full mb-4" />)}
+          {cryptoData && <div className="grid grid-cols-3 gap-4 mb-6"> {/* ... */} </div>}
+
+          <h3 className="text-lg font-semibold mt-6">Latest Crypto News</h3>
+          {newsError && <Alert data-testid="text-crypto-news-error"><AlertCircle /> <AlertDescription>Failed to load news.</AlertDescription></Alert>}
+          {newsLoading && Array(5).fill(0).map((_, i) => <Skeleton key={i} className="h-24 w-full mb-4" />)}
+          {cryptoNews && cryptoNews.map((article) => (
+             <article key={article.id} className="flex space-x-4 p-4 mb-4 border rounded-lg hover:bg-slate-50 dark:hover:bg-slate-700/50">
+               {/* ... news article content ... */}
+             </article>
+          ))}
+        </div>
+      </DialogContent>
+    </Dialog>
+  );
+};
+
+const GlobalModal = ({ onClose }: ModalProps) => {
+  const { data: articles, isLoading, error } = useQuery({ queryKey: ['/api/global-news'], queryFn: api.getGlobalNews });
+  return (
+    <Dialog open onOpenChange={onClose}>
+      <DialogContent className="max-w-4xl max-h-[90vh] overflow-hidden" data-testid="modal-global">
+        <DialogHeader><DialogTitle data-testid="text-global-title">Global News</DialogTitle></DialogHeader>
+        <div className="overflow-y-auto max-h-[calc(90vh-80px)] p-6">
+          {error && <Alert data-testid="text-global-error"><AlertCircle /><AlertDescription>Failed to load global news.</AlertDescription></Alert>}
+          {isLoading && Array(10).fill(0).map((_, i) => <Skeleton key={i} className="h-24 w-full mb-4" />)}
+          {articles && articles.map((article) => (
+             <article key={article.id} className="flex space-x-4 p-4 mb-4 border rounded-lg hover:bg-slate-50 dark:hover:bg-slate-700/50">
+               {/* ... news article content ... */}
+             </article>
+          ))}
+        </div>
+      </DialogContent>
+    </Dialog>
+  );
+};
+
+const GameModal = ({ onClose }: ModalProps) => {
+  // TicTacToe logic here...
+  return (
+    <Dialog open onOpenChange={onClose}>
+      <DialogContent className="max-w-lg w-full" data-testid="modal-game">
+        <DialogHeader><DialogTitle data-testid="text-game-title">Tic-Tac-Toe</DialogTitle></DialogHeader>
+        <div className="p-6">
+          {/* ... TicTacToe component code ... */}
+        </div>
+      </DialogContent>
+    </Dialog>
+  );
+};
+
+const MarketModal = ({ onClose }: ModalProps) => {
+  const { data, isLoading, error } = useQuery({ queryKey: ['/api/indian-market'], queryFn: api.getMarketData });
+  const formatPrice = (p: number) => `₹${p.toFixed(2)}`;
+  const formatPercentage = (p: number) => `${p > 0 ? '+' : ''}${p.toFixed(2)}%`;
+  return (
+    <Dialog open onOpenChange={onClose}>
+      <DialogContent className="max-w-xl max-h-[90vh] overflow-hidden" data-testid="modal-market">
+        <DialogHeader><DialogTitle data-testid="text-market-title">Indian Markets</DialogTitle></DialogHeader>
+        <div className="overflow-y-auto max-h-[calc(90vh-80px)] p-6">
+          {error && <Alert data-testid="text-market-error"><AlertCircle /><AlertDescription>Failed to load market data.</AlertDescription></Alert>}
+          {isLoading && Array(2).fill(0).map((_,i) => <Skeleton key={i} className="h-32 w-full mb-4" />)}
+          {data && data.map((market) => (
+            <div key={market.symbol} className="bg-slate-50 dark:bg-slate-700 rounded-lg p-6 border mb-4">
+              <h3 className="text-xl font-bold">{market.name}</h3>
+              <div className="text-4xl font-extrabold">{formatPrice(market.price)}</div>
+              <div className={`text-lg font-semibold ${market.change >= 0 ? 'text-green-600' : 'text-red-600'}`}>
+                {market.change.toFixed(2)} ({formatPercentage(market.changePercent)})
+              </div>
+            </div>
+          ))}
+        </div>
+      </DialogContent>
+    </Dialog>
+  );
+};
+
+const SettingsModal = ({ onClose }: ModalProps) => {
+  const { isDark, toggleTheme } = useTheme();
+  return (
+    <Dialog open onOpenChange={onClose}>
+      <DialogContent className="max-w-md w-full" data-testid="modal-settings">
+        <DialogHeader><DialogTitle data-testid="text-settings-title">Settings</DialogTitle></DialogHeader>
+        <div className="p-6 space-y-6">
+          <div className="flex items-center justify-between p-4 bg-slate-50 dark:bg-slate-700 rounded-lg" data-testid="setting-theme-toggle">
+            <div className="flex items-center space-x-4">
+              {isDark ? <Moon className="w-6 h-6" /> : <Sun className="w-6 h-6" />}
+              <Label htmlFor="theme-toggle" className="text-lg font-medium">Dark Mode</Label>
+            </div>
+            <Switch id="theme-toggle" checked={isDark} onCheckedChange={toggleTheme} data-testid="switch-theme-toggle" />
+          </div>
+        </div>
+      </DialogContent>
+    </Dialog>
+  );
+};
+
+// =================================================================
+// MAIN DASHBOARD
+// (Recreating from Dashboard.tsx)
+// =================================================================
+type ModalType = 'news' | 'crypto' | 'global' | 'game' | 'market' | 'settings' | null;
+
+const Dashboard = () => {
+  const [activeModal, setActiveModal] = useState<ModalType>(null);
+  const closeModal = () => setActiveModal(null);
+  const cards = [
+    { id: 'news', title: 'General News', subtitle: 'Global headlines', icon: Newspaper, statusText: 'Live updates', iconColor: 'text-blue-600', bgColor: 'bg-blue-100', statusColor: 'bg-green-500' },
+    { id: 'crypto', title: 'Crypto News', subtitle: 'Digital assets', icon: Bitcoin, statusText: 'BTC', iconColor: 'text-amber-600', bgColor: 'bg-amber-100', statusColor: 'bg-amber-500' },
+    { id: 'global', title: 'Global News', subtitle: 'International affairs', icon: Globe, statusText: 'Breaking news', iconColor: 'text-emerald-600', bgColor: 'bg-emerald-100', statusColor: 'bg-red-500' },
+    { id: 'game', title: 'Mini Game', subtitle: 'Tic-tac-toe', icon: Gamepad2, statusText: 'Quick play', iconColor: 'text-purple-600', bgColor: 'bg-purple-100', statusColor: 'bg-purple-500' },
+    { id: 'market', title: 'Indian Markets', subtitle: 'Live stock data', icon: TrendingUp, statusText: 'NIFTY 50', iconColor: 'text-indigo-600', bgColor: 'bg-indigo-100', statusColor: 'bg-indigo-500' },
+    { id: 'settings', title: 'Settings', subtitle: 'Preferences', icon: Settings, statusText: 'Customize experience', iconColor: 'text-slate-600', bgColor: 'bg-slate-100', statusColor: 'bg-slate-500' },
+  ];
+
+  return (
+    <main className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+      <div className="mb-8">
+        <h2 className="text-3xl font-bold text-slate-900 dark:text-slate-100">Dashboard</h2>
+        <p className="text-slate-600 dark:text-slate-400">Access all your feeds and tools in one place</p>
+      </div>
+      <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
+        {cards.map((card) => {
+          const IconComponent = card.icon;
+          return (
+            <Card key={card.id} className="card-hover cursor-pointer" onClick={() => setActiveModal(card.id as ModalType)}>
+              <CardContent className="p-6">
+                <div className="flex items-center justify-between mb-4">
+                  <div className="flex items-center space-x-3">
+                    <div className={`p-3 ${card.bgColor} rounded-lg`}><IconComponent className={`${card.iconColor} w-6 h-6`} /></div>
+                    <div>
+                      <h3 className="text-lg font-semibold">{card.title}</h3>
+                      <p className="text-sm text-slate-500">{card.subtitle}</p>
+                    </div>
+                  </div>
+                  <ArrowRight className="text-slate-400 w-5 h-5" />
+                </div>
+              </CardContent>
+            </Card>
+          );
+        })}
+      </div>
+      {activeModal === 'news' && <NewsModal onClose={closeModal} />}
+      {activeModal === 'crypto' && <CryptoModal onClose={closeModal} />}
+      {activeModal === 'global' && <GlobalModal onClose={closeModal} />}
+      {activeModal === 'game' && <GameModal onClose={closeModal} />}
+      {activeModal === 'market' && <MarketModal onClose={closeModal} />}
+      {activeModal === 'settings' && <SettingsModal onClose={closeModal} />}
+    </main>
+  );
+};
+
+// =================================================================
+// APP WRAPPER
+// (Recreating the main App component)
+// =================================================================
+const queryClient = new QueryClient();
+
+export function App() {
+  return (
+    <ThemeProvider>
+      <QueryClientProvider client={queryClient}>
+        <div className="min-h-screen bg-background dark:bg-slate-900 text-foreground dark:text-slate-100">
+          <Header />
+          <Dashboard />
+        </div>
+      </QueryClientProvider>
+    </ThemeProvider>
+  );
+}
